--- a/Week_1/nhanes.qmd
+++ b/Week_1/nhanes.qmd
@@ -63,6 +63,7 @@ uhg <- select(urine_hg, SEQN, URXUHG)
 df <- list(diet, tiid, bhg, uhg)
 
 df <- df %>% reduce(full_join, by = 'SEQN')
+view(df)
 ```
 
 1.  Filter Dataframe df for the following:
@@ -76,8 +77,8 @@ df <- df %>%
   filter(DIQ010 %in% c(1, 2), DRD370B %in% c(1, 2)) %>%
   # Recode 1 to "Yes" and 2 to "No" for DIQ010 and DRD360
   mutate(
-    DIQ010 = ifelse(DIQ010 == 1, "Yes", "No"),
-    DRD370B = ifelse(DRD370B == 1, "Yes", "No")
+    DIQ010 = ifelse(DIQ010 == 1, "Has diabetes", "No Diabetes"),
+    DRD370B = ifelse(DRD370B == 1, "Consumes Ahi", "No Ahi")
   )
   
 ```
@@ -92,13 +93,13 @@ ggplot(data=df, aes(x = DRD370B, fill = DIQ010)) +
 ```
 
 2.  Determine the prior probability that someone has diabetes (DIQ010)
-    -   P(B)
+    -   P(B) Someone has DIabetes
 
 ```{r}
 prior_probability_that_someone_has_diabetes <-df %>% 
   tabyl(DIQ010) %>% 
   adorn_totals("row")
-prior_probability_that_someone_has_diabetes
+prior_probability_that_someone_has_diabetes <-0.13
 ```
 
 2.  Determine the prior probability that someone eats tuna (DRD370B)
@@ -108,7 +109,7 @@ prior_probability_that_someone_has_diabetes
 prior_probability_that_someone_that_eats_ahi <- df %>% 
   tabyl(DRD370B) %>% 
   adorn_totals("row")
-prior_probability_that_someone_that_eats_ahi
+prior_probability_that_someone_that_eats_ahi <-0.36
 ```
 
 2.  Determine the likelihood of eating tuna and having diabetes
@@ -119,13 +120,110 @@ likelihood <- df %>%
   tabyl(DRD370B,DIQ010)%>%
   adorn_percentages("col")
 likelihood
+
+likelihood <- 0.36
 ```
 
 2.  Determine posterior probability via bayes theorem
     -   P(B\|A)
 
 ```{r}
-(prior_probability_that_someone_that_eats_ahi*likelihood)/prior_probability_that_someone_has_diabetes
+(prior_probability_that_someone_has_diabetes*likelihood)/prior_probability_that_someone_that_eats_ahi
 ```
 
 2.  What other questions can we ask of this data?
+
+## Bayes Theorem
+
+$$ P(B \mid A) = \frac{P(B) L(B \mid A)}{P(A)}  $$
+
+**B \<- Has Diabetes**
+
+**A \<- Consumes Ahi**
+
+P(B)
+
+Probability that person has diabetes
+
+```{r}
+df %>%
+  tabyl(DIQ010)
+```
+
+```{r}
+probability_has_diabetes <- 0.13
+```
+
+#### L(B\|A) = P(A\|B)
+
+```{r}
+df %>%
+  tabyl(DRD370B,DIQ010) %>%
+  adorn_percentages("col")
+
+```
+
+```{r}
+nhanes_percent<- df %>%
+  tabyl(DRD370B,DIQ010) %>%
+  adorn_percentages("row")
+nhanes_percent
+#Adds to one 1 thru rows (don't want this)
+```
+
+```{r}
+probability_consumes_ahi_given_diabetes <- 0.36
+```
+
+#### P(A) probability on consume ahi
+
+```{r}
+df  %>%
+  tabyl(DRD370B)
+
+```
+
+```{r}
+probability_consumes_ahi <-0.36
+```
+
+#### P(B\|A)
+
+```{r}
+(probability_has_diabetes*probability_consumes_ahi_given_diabetes)/probability_consumes_ahi
+```
+
+Not much of a difference
+
+0.128 \~ 0.13
+
+Prior Post
+
+### Diabetes & Age
+
+```{r}
+demographics <- demographics %>%
+  select(SEQN, RIDRETH1, RIAGENDR, RIDAGEYR)
+```
+
+```{r}
+nhanes_data <- left_join(df, demographics, by = "SEQN")
+```
+
+```{r}
+nhanes_data <- nhanes_data %>%
+  mutate(AGE_BRACKET = ifelse(RIDAGEYR > 40, "old", "young"))
+#nhanes_data <- nhanes_data[, -17] #delete column 
+view(nhanes_data)
+
+```
+
+```{r}
+ggplot(nhanes_data, aes(x = RIDAGEYR, fill = DIQ010)) + geom_density(alpha = 0.5)
+```
+
+#### P(B\|A)
+
+B \<- has diabetes
+
+A \<- age over 40
