Finished the assignment, indents seem to mess with running the code chunks

--- a/Week_7/naive_bayes_penguins_lecture2.qmd
+++ b/Week_7/naive_bayes_penguins_lecture2.qmd
@@ -25,6 +25,7 @@ Make a visualization that will help the researcher determine the species based o
 ```{r}
 data(penguins_bayes)
 penguins <- penguins_bayes
+penguins
 ```
 
 ```{r}
